test/files/neg/switch.check
switch.scala:40: warning: could not emit switch for @switch annotated match
  def fail2(c: Char) = (c: @switch @unchecked) match {
                                    ^
switch.scala:47: warning: could not emit switch for @switch annotated match
  def fail3(c: Char) = (c: @unchecked @switch) match {
                                       ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
